--- a/p1/src/main/webapp/WEB-INF/web.xml
+++ b/p1/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,13 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<listener>
+		<listener-class>info.yinhua.core.listener.SessionListener</listener-class>
+	</listener>
+
+	<session-config>
+		<session-timeout>2</session-timeout>
+	</session-config>
 
 	<jsp-config>
 		<taglib>
