--- a/p1/.settings/org.eclipse.core.resources.prefs
+++ b/p1/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,7 @@ encoding//src/main/webapp/WEB-INF/jsp/common/error.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/login0.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/menu_side.jsp=UTF-8
 encoding//src/main/webapp/css/common.css=UTF-8
+encoding//src/main/webapp/css/common0.css=gb18030
 encoding//src/main/webapp/default.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
