--- a/p1/src/main/webapp/WEB-INF/web.xml
+++ b/p1/src/main/webapp/WEB-INF/web.xml
@@ -121,6 +121,6 @@
 	</error-page>
 	<error-page>
 		<exception-type>java.lang.Exception</exception-type>
-		<location>/error?error=exception</location>
+		<location>/error?error=exception&amp;source=errorpage</location>
 	</error-page>
 </web-app>
