--- a/p1/src/main/webapp/WEB-INF/web.xml
+++ b/p1/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<web-app id="WebApp_ID" version="3.0"
+    xmlns="http://java.sun.com/xml/ns/javaee"
+    xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+
 	<display-name>p1</display-name>
 
 	<!-- http://struts.apache.org/docs/webxml.html -->
@@ -36,26 +41,25 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<!--
     <filter-mapping>
         <filter-name>struts-prepare</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-	 -->
 	<filter-mapping>
 		<filter-name>sitemesh</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<!--
 	<filter-mapping>
         <filter-name>struts-execute</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-	 -->
+    <!-- 1.sample是用上面的方式。
+    2.如果出现错误The Struts dispatcher cannot be found.(Unhandled exception occurred whilst decorating page)的话，用struts2会返回空白的500页面。
 	<filter-mapping>
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+     -->
 
 	<!--
 	 spring配置
@@ -98,29 +102,35 @@
             <role-name>no-users</role-name>
         </auth-constraint>
     </security-constraint>
- 
     <security-role>
         <description>Don't assign users to this role</description>
         <role-name>no-users</role-name>
     </security-role>
+
+<!-- 只有404页面可以显示 -->
 	<error-page>
 		<error-code>403</error-code>
-		<location>/error?error=403</location>
+		<location>/WEB-INF/jsp/common/error.jsp?type=403</location>
 	</error-page>
 	<error-page>
 		<error-code>404</error-code>
-		<location>/error?error=404</location>
+		<location>/WEB-INF/jsp/common/error.jsp?type=404</location>
 	</error-page>
 	<error-page>
 		<error-code>500</error-code>
-		<location>/error?error=500</location>
+		<location>/WEB-INF/jsp/common/error.jsp?type=500</location>
 	</error-page>
 	<error-page>
 		<error-code>505</error-code>
-		<location>/error?error=505</location>
+		<location>/WEB-INF/jsp/common/error.jsp?type=505</location>
 	</error-page>
+<!-- servlet3.0 -->
+	<error-page>
+		<location>/WEB-INF/jsp/common/error.jsp?type=else</location>
+	</error-page>
+
 	<error-page>
 		<exception-type>java.lang.Exception</exception-type>
-		<location>/error?error=exception&amp;source=errorpage</location>
+		<location>/WEB-INF/jsp/common/error.jsp?type=exception&amp;source=errorpage</location>
 	</error-page>
 </web-app>
