--- a/p1/src/main/webapp/WEB-INF/web.xml
+++ b/p1/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="3.0"
-    xmlns="http://java.sun.com/xml/ns/javaee"
-    xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+<!-- https://www.mkyong.com/web-development/the-web-xml-deployment-descriptor-examples/ -->
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
 	<display-name>p1</display-name>
 
@@ -14,32 +15,41 @@
 		<param-value>classpath:application-context*.xml</param-value>
 	</context-param>
 
+<!-- 
+about async-supported
+http://stackoverflow.com/questions/20643970/asyncsupported-exception-when-switch-from-jetty-1-7-to-1-9 -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <async-supported>true</async-supported>
 	</filter>
 
 	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareAndExecuteFilter</filter-class>
+        <async-supported>true</async-supported>
 	</filter>
     <filter>
         <filter-name>struts-prepare</filter-name>
         <filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareFilter</filter-class>
+        <async-supported>true</async-supported>
     </filter>
     <filter>
         <filter-name>struts-execute</filter-name>
         <filter-class>org.apache.struts2.dispatcher.filter.StrutsExecuteFilter</filter-class>
+        <async-supported>true</async-supported>
     </filter>
 	<filter>
 		<filter-name>sitemesh</filter-name>
 		<filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
+        <async-supported>true</async-supported>
 	</filter>
 	
 	<!-- https://github.com/alexcheng1982/server-sent-events-sample -->
     <filter>
         <filter-name>continuation</filter-name>
         <filter-class>org.eclipse.jetty.continuation.ContinuationFilter</filter-class>
+        <async-supported>true</async-supported>
     </filter>
 
 	<filter-mapping>
@@ -90,12 +100,20 @@
 	
     <!-- https://github.com/jetty-project/jetty-eventsource-servlet/wiki -->
 	<servlet>
-        <servlet-name>eventsource</servlet-name>
+        <servlet-name>eventSourceServlet</servlet-name>
         <servlet-class>info.yinhua.web.jetty.UserEventSourceServlet</servlet-class>
         <async-supported>true</async-supported>
     </servlet>
+    <!-- http://www.madbit.org/blog/programming/168/make-servlets-with-spring/
+    http://blogs.sourceallies.com/2012/02/injecting-spring-beans-into-java-servlets/
+    因为这样通过sprint创建的servlet不执行init方法，在application-context.xml中的bean里加上init-method="init"，也会有其他问题。所以放弃。
+    <servlet>
+        <servlet-name>eventSourceServlet</servlet-name>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
+        <async-supported>true</async-supported>
+    </servlet> -->
     <servlet-mapping>
-        <servlet-name>eventsource</servlet-name>
+        <servlet-name>eventSourceServlet</servlet-name>
         <url-pattern>/sse/*</url-pattern>
     </servlet-mapping>
 
